--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,14 @@
+buildscript{
+    repositories{
+        jcenter()
+    }
+}
+
 plugins {
     id 'java'
     id 'idea'
     id 'jacoco'
-    id 'com.jfrog.bintray' version '1.8.4'
+    id 'com.jfrog.bintray' version '1.8.5'
     id 'com.diffplug.spotless' version '6.25.0'
     id 'io.codearte.nexus-staging' version '0.30.0'
     id 'de.marcphilipp.nexus-publish' version '0.4.0'
