--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,11 @@ ext {
     logbackVersion = '1.5.6'
     mockitoKotlinVersion = '1.9.24'
     testContainersVersion = '1.19.8'
-    besuPluginVersion = '24.1.2'
-    besuInternalVersion = '24.1.2'
+    besuPluginVersion = '25.2.1'
+    besuInternalVersion = '25.2.1'
     besuInternalCryptoVersion = '23.1.3'
-    besuCryptoDepVersion = '0.8.3'
+    besuCryptoDepVersion = '1.1.2'
+    besuBlsVersion = '1.0.0'
 }
 
 apply {
@@ -35,7 +36,7 @@ apply {
         'junit'
     ].each { buildScript ->
         download {
-            src "https://raw.githubusercontent.com/hyperledger-web3j/web3j-build-tools/main/gradle/$buildScript/build.gradle"
+            src "https://raw.githubusercontent.com/LFDT-web3j/web3j-build-tools/main/gradle/$buildScript/build.gradle"
             dest "$rootDir/gradle/$buildScript/build.gradle"
             overwrite false
             quiet true
@@ -80,7 +81,7 @@ dependencies {
     implementation "org.hyperledger.besu.internal:metrics-core:$besuInternalVersion"
     implementation "org.hyperledger.besu.internal:trie:$besuInternalVersion"
     implementation "org.hyperledger.besu.internal:util:$besuInternalVersion"
-    implementation "org.hyperledger.besu:bls12-381:$besuCryptoDepVersion"
+    implementation "org.hyperledger.besu:bls12-381:$besuBlsVersion"
 
     implementation "org.hyperledger.besu:secp256k1:$besuCryptoDepVersion"
 }
@@ -90,16 +91,13 @@ test {
 }
 
 compileKotlin {
-    kotlinOptions {
-        jvmTarget = "17"
-    }
+    kotlinOptions.jvmTarget = "21"
 }
 
 compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "17"
-    }
+    kotlinOptions.jvmTarget = "21"
 }
+
 
 tasks.named("spotlessKotlin").configure { dependsOn("compileKotlin","spotlessJava", "spotlessGroovyGradle","processTestResources") }
 tasks.named("spotlessJava").configure { dependsOn("compileTestJava","compileTestKotlin","compileKotlin","compileTestKotlin","spotlessGroovyGradle","processTestResources") }
