--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
+          distribution: 'zulu'
           java-version: 21
       - name: Cache Gradle packages
         uses: actions/cache@v4
@@ -26,6 +27,5 @@ jobs:
         run: chmod +x gradlew
       - name: Build
         run: ./gradlew check jacocoTestReport
-      - name: After success
-        run: bash <(curl -s https://codecov.io/bash)
-        if: ${{ success() }}
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v3
