--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
     id 'idea'
     id 'jacoco'
     id 'com.diffplug.spotless' version '6.25.0'
@@ -7,13 +8,14 @@ plugins {
     id 'de.marcphilipp.nexus-publish' version '0.4.0'
     id 'org.jetbrains.kotlin.jvm' version '2.1.0'
     id 'de.undercouch.download' version '4.1.2'
+    id 'org.jreleaser' version '1.19.0'
 }
 
 description 'Web3j-unit extension'
 
 
 ext {
-    web3jVersion = version
+    web3jVersion = '5.0.1'
     kotlinLoggingVersion = '3.0.5'
     logbackVersion = '1.5.6'
     mockitoKotlinVersion = '1.9.24'
@@ -47,6 +49,7 @@ apply {
 }
 
 repositories {
+    mavenCentral()
     maven { url "https://hyperledger.jfrog.io/artifactory/besu-maven/" }
     maven { url "https://artifacts.consensys.net/public/maven/maven/" }
     maven { url "https://splunk.jfrog.io/splunk/ext-releases-local" }
