--- a/gradle/repositories/build.gradle
+++ b/gradle/repositories/build.gradle
@@ -1,5 +1,8 @@
 repositories {
     mavenCentral()
-    maven { url 'https://oss.sonatype.org/content/repositories/releases/' }
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven {
+        url 'https://plugins.gradle.org/m2/'
+    }
+    maven { url 'https://central.sonatype.com/repository/maven-snapshots/' }
+
 }
