--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ description 'Web3j-unit extension'
 
 
 ext {
-    web3jVersion = '5.0.1'
+    web3jVersion = version
     kotlinLoggingVersion = '3.0.5'
     logbackVersion = '1.5.6'
     mockitoKotlinVersion = '1.9.24'
