--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build
-        run: ./gradlew check jacocoTestReport --debug
+        run: ./gradlew check jacocoTestReport
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
